--- a/gradle.properties
+++ b/gradle.properties
@@ -4,14 +4,13 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.21.3
-yarn_mappings=1.21.3+build.2
+minecraft_version=1.21.2
 loader_version=0.16.7
 
 # Mod Properties
 mod_version=1.0.0
-maven_group=com.example
-archives_base_name=modid
+maven_group=dev.kinau
+archives_base_name=oldnametags
 
 # Dependencies
-fabric_version=0.106.1+1.21.3
+fabric_version=0.106.1+1.21.2
